cabal-version: 3.4
name:          cardano-datum-formats
version:       0.1.0.0
synopsis:      Helpers for working with Cardano datum formats
category:      Blockchain
license:       Apache-2.0
license-files: LICENSE
author:        Jann
maintainer:    jann@localhost
build-type:    Simple
extra-doc-files:
  README.md
description:
  Minimal library and test scaffold for experimenting with Cardano datum formats.

common lang
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: lang
  hs-source-dirs: lib
  exposed-modules:
    Cardano.Datum.Formats
  build-depends:
    base ^>=4.18.2.1

test-suite cardano-datum-formats-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base ^>=4.18.2.1
    , cardano-datum-formats
    , tasty
    , tasty-hunit
