cabal-version: 3.4
name:          cardano-datum-formats
version:       0.1.0.0
synopsis:      Helpers for working with Cardano datum formats
category:      Blockchain
license:       Apache-2.0
license-files: LICENSE
author:        Jann
maintainer:    jann@localhost
build-type:    Simple
extra-doc-files:
  README.md
description:
  Minimal library and test scaffold for experimenting with Cardano datum formats.

common lang
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: lang
  hs-source-dirs: lib
  exposed-modules:
    Cardano.Address.Aiken
    Cardano.Address.Plutus
    Cardano.Asset
    Cardano.Asset.Pair
    Cardano.Data
    Cardano.Transaction.OutputReference
    Cardano.Protocol.MinSwap.Order
    Cardano.Protocol.MinSwap.Pool
    Cardano.Protocol.Liqwid.Action
    Cardano.Protocol.Liqwid.Common
    Cardano.Protocol.Liqwid.Loan
    Cardano.Protocol.Liqwid.Market
    Cardano.Protocol.Pulse.Common
    Cardano.Protocol.Pulse.Market
    Cardano.Protocol.Pulse.MarketInfo
    Cardano.Protocol.Pulse.Oracle
    Cardano.Protocol.Pulse.Order
    Cardano.Protocol.Pulse.SYVault
    Cardano.Protocol.Pulse.YTStake
    Cardano.Protocol.Sundae.Order
    Cardano.Protocol.Sundae.Pool
    Cardano.Protocol.Sundae.V3.Order
    Cardano.Protocol.Sundae.V3.Pool
  build-depends:
    QuickCheck
    , base ^>=4.18.2.1
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-api-gen
    , cardano-ledger-core
    , convex-base
    , convex-optics
    , hedgehog-quickcheck
    , lens
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text

executable datum-collector
  import: lang
  hs-source-dirs: exe/datum-collector
  main-is: Main.hs
  build-depends:
    base ^>=4.18.2.1
    , base16-bytestring
    , blockfrost-api
    , blockfrost-client-core
    , bytestring
    , cardano-api
    , cardano-datum-formats
    , containers
    , convex-blockfrost
    , convex-base
    , convex-optics
    , lens
    , mtl
    , optparse-applicative
    , text

test-suite cardano-datum-formats-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Cardano.Protocol.MinSwap.Test
    Cardano.Protocol.Liqwid.Test
    Cardano.Protocol.Pulse.Test
    Cardano.Protocol.Sundae.Test
    Cardano.Test.Utils
  build-depends:
    base ^>=4.18.2.1
    , base16-bytestring
    , cardano-datum-formats
    , cardano-api
    , plutus-tx
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
